--- a/_sass/_02_settings_typography.scss
+++ b/_sass/_02_settings_typography.scss
@@ -9,8 +9,7 @@ Modular Scale › http://modularscale.com/scale/?px1=16&px2=36&ra1=1.25&ra2=0
 */
 
 @import "functions"; // Allows the use of rem-calc() or lower-bound() in your settings
-
-
+@import url(https://fonts.googleapis.com/css?family=Oxygen:400,300,700);
 
 /* Fonts
 ------------------------------------------------------------------- */
@@ -21,7 +20,7 @@ $rem-base: $base-font-size;
 $base-line-height: 1.5 !default;
 
 
-$font-family-sans-serif: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$font-family-sans-serif: "Oxygen", "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-family-serif: "Volkhov", Georgia, Times, serif;
 $font-family-monospace: "Lucida Console", Monaco, monospace;
 
