--- a/_sass/_04_settings_global.scss
+++ b/_sass/_04_settings_global.scss
@@ -1372,7 +1372,7 @@ $table-head-bg: $grey-2;
 // $include-html-top-bar-classes: $include-html-classes;
 
 // Background color for the top bar
-$topbar-bg-color: #fff;
+$topbar-bg-color: $grey-8;
 $topbar-bg: $topbar-bg-color;
 
 // Height and margin
@@ -1406,7 +1406,7 @@ $topbar-link-font-size: rem-calc(15);
 // $topbar-link-bg-active: $primary-color;
 // $topbar-link-bg-active-hover: scale-color($primary-color, $lightness: -14%);
 // $topbar-link-font-family: $body-font-family;
-$topbar-link-text-transform: uppercase;
+// $topbar-link-text-transform: uppercase;
 // $topbar-link-padding: $topbar-height / 3;
 // $topbar-back-link-size: $h5-font-size;
 // $topbar-link-dropdown-padding: 20px;
